# SUVI

./: .env  .env.example  .gitignore  GEMINI.md  README.md  SUVI_Gemini_CLI_Master.md  client_secret_722150734142-15jten18fuo8ue9nbvlk07p6empnfr5a.apps.googleusercontent.com.json  environment_awareness.md  fixes.md  intro_computer_use.ipynb  pyproject.toml  references.text
.github/workflows/: build-desktop.yml  deploy-agents.yml  deploy-gateway.yml  test.yml
agents/browser_agent/: __init__.py  agent.py  agent_card.json  deploy.py  system_prompt.py
agents/code_agent/: __init__.py  agent.py  agent_card.json  deploy.py  system_prompt.py
agents/computer_use_agent/: agent.py  system_prompt.py
agents/data_agent/: __init__.py  agent.py
agents/memory_agent/: __init__.py  agent.py
agents/orchestrator/: __init__.py  agent.py  agent_card.json  composer.py  deploy.py  planner.py  router.py  system_prompt.py  validator.py
agents/search_agent/: agent.py
agents/shared/: __init__.py  a2a_client.py  agent_utils.py  memory_client.py  models.py  permissions.py  telemetry.py
agents/text_agent/: __init__.py  agent.py
apps/desktop/: Makefile  pyproject.toml  requirements.txt  suvi.spec  test_day1.py  (+8 more)
infrastructure/: deploy_gateway.sh  firestore.indexes.json  firestore.rules  setup_gcp.ps1  setup_gcp.sh
scripts/: assign_roles.bat  assign_roles.sh  deploy_agents.py  gcp_config.py  gcp_setup_guide.py  index_codebase.py  seed_firestore.py  setup_gcp.bat  setup_gcp.sh  start_agents.py
shared/: __init__.py
suvi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+105 files in other folders)
