[project]
name = "suvi"
version = "1.0.0"
description = "Superintelligent Unified Voice Interface - Multi-Agent Desktop OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core AI & Google Cloud ---
    "google-genai>=0.5.0",
    "google-cloud-aiplatform>=1.43.0",
    "google-cloud-firestore>=2.14.0",
    "google-cloud-pubsub>=2.19.0",
    "google-cloud-secret-manager>=2.18.0",
    "google-auth>=2.28.0",

    # --- Local Desktop UI (PyQt6) ---
    "PyQt6>=6.6.1",
    "qasync>=0.27.1",

    # --- Local I/O & Automation ---
    "sounddevice>=0.4.6",
    "numpy>=1.26.4",
    "mss>=9.0.1",
    "Pillow>=10.2.0",
    "pvporcupine>=3.0.1",
    "pynput>=1.7.6",
    "PyAutoGUI>=0.9.54",
    "playwright>=1.42.0",

    # --- Networking & Cloud Run Gateway ---
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "websockets>=12.0",
    "redis>=5.0.3",
    "pydantic>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pyinstaller>=6.4.0",
    "black>=24.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "agents*", "shared*"]
exclude = ["infrastructure*", "docs*", "scripts*", "tests*"]
namespaces = true